--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "@dhis2/app-runtime-adapter-d2": "^1.0.2",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.3.0",
+    "@types/yup": "^0.29.11",
     "d2": "^31.10.0",
     "effector": "^21.8.11",
     "effector-react": "^21.3.2",
+    "formik": "^2.2.6",
     "framer-motion": "^4.1.4",
     "react-grid-layout": "^1.2.4",
     "react-query": "^3.13.10",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "yup": "^0.32.9"
   }
 }
