--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "effector-react": "^21.3.2",
     "framer-motion": "^4.1.4",
     "react-grid-layout": "^1.2.4",
+    "react-icons": "^4.2.0",
     "react-query": "^3.13.10",
     "react-router-dom": "^5.2.0"
   }
