--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "effector-react": "^21.3.2",
     "formik": "^2.2.7",
     "framer-motion": "^4.1.4",
+    "lodash": "^4.17.21",
     "react-grid-layout": "^1.2.4",
     "react-query": "^3.13.10",
     "react-router-dom": "^5.2.0",
