--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "framer-motion": "^4.1.4",
     "lodash": "^4.17.21",
     "react-grid-layout": "^1.2.4",
+    "react-icons": "^4.2.0",
     "react-query": "^3.13.10",
     "react-router-dom": "^5.2.0",
     "yup": "^0.32.9"
