--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.3.0",
     "@types/yup": "^0.29.11",
+    "antd": "^4.16.10",
     "d2": "^31.10.0",
     "effector": "^21.8.11",
     "effector-react": "^21.3.2",
