--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/yup": "^0.29.11",
     "antd": "^4.16.10",
     "d2": "^31.10.0",
+    "date-fns": "^2.23.0",
     "effector": "^21.8.11",
     "effector-react": "^21.3.2",
     "formik": "^2.2.6",
