--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "build": "d2-app-scripts build",
-    "start": "d2-app-scripts start",
+    "start": "d2-app-scripts start & node setupProxy.js",
     "test": "d2-app-scripts test",
     "deploy": "d2-app-scripts deploy"
   },
@@ -28,11 +28,14 @@
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.3.0",
     "@types/yup": "^0.29.11",
+    "cors": "^2.8.5",
     "d2": "^31.10.0",
     "effector": "^21.8.11",
     "effector-react": "^21.3.2",
+    "express": "^4.17.2",
     "formik": "^2.2.7",
     "framer-motion": "^4.1.4",
+    "http-proxy-middleware": "^2.0.1",
     "lodash": "^4.17.21",
     "react-grid-layout": "^1.2.4",
     "react-query": "^3.13.10",
